--- a/templates/settings_panel.html
+++ b/templates/settings_panel.html
@@ -63,6 +63,13 @@
                     <option value="">Use current connection</option>
                 </select>
                 <small class="openvault-hint">LLM profile used for smart retrieval (can use faster model)</small>
+                
+                <!-- canonical date tracking -->
+                <label class="checkbox_label">
+                    <input type="checkbox" id="openvault_canonical_date_tracking" />
+                        <span>Canonical date tracking</span>
+                    <small class="openvault-hint">Only activate if chat contains a source of date tracking (i.e. from preset/ an diffrent extension)!</small>
+                </label>
 
                 <label for="openvault_max_response_tokens_extraction">Maximum Response Tokens Extractions</label>
                 <input type="number" id="openvault_max_response_tokens_extraction" class="text_pole" min="1" value="2000" />
